# skill-office

./: .gitignore  README.md  apm.yml  pypptx.py  pyproject.toml
.apm/skills/pypptx/: README.md  SKILL.md  apm.yml
.apm/skills/pypptx/pypptx/: cli.py
.apm/skills/pypptx/pypptx/ops/: verify.py
.apm/skills/pyxlsx/: SKILL.md  pyproject.toml  pyxlsx.py
.apm/skills/pyxlsx/pyxlsx/: cli.py
.apm/skills/pyxlsx/pyxlsx/ops/: inspect.py  write.py
.github/workflows/: release.yml
.takt/: assets-manifest.json
.takt/beads/: B-011dcdd6.json  B-04b3ecad.json  B-084ff280.json  B-08c7e6b6.json  B-0c040317.json  B-0d1f2859.json  B-127c7e6a.json  B-150f15c0.json  B-1853c640.json  B-1d51984d.json  B-23fe63b6.json  B-2449edfe.json  B-2be9e5d1.json  B-2e57a95f.json  B-338d86fc.json  B-36afd762.json  B-379f2433.json  B-407ceaca.json  B-457182d7-corrective.json  B-457182d7.json  B-4befdc71.json  B-52ca6e5a.json  B-59d72d1a.json  B-5a1824ba.json  B-677c8330.json  B-6dc0a09b.json  B-6f4f9607.json  B-6fa5ac31.json  B-74563794.json  B-76c52394.json  B-89996fdb.json  B-8b50ace0.json  B-8c9fdaa7.json  B-966cf34d.json  B-975c975b.json  B-989bafa0.json  B-98fd7e6c.json  B-9ec19a2c.json  B-a73f119b.json  B-b44f4324.json  (+23 more)
pypptx/: cli.py
pypptx/ops/: clean.py  thumbnails.py
specs/planned/: demote-font-size-below-12pt-check-from-error-to-warning.md  pyxlsx-cli-excel-toolkit.md
tests/: conftest.py  test_clean.py  test_cli.py  test_extract.py  test_pack.py  test_slides.py  test_standalone.py  test_verify.py  test_xlsx_cli.py  test_xlsx_inspect.py  test_xlsx_pack.py  test_xlsx_write.py
